# Simple-Social

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 67fa3417bd7c_auto.py  9c3a24411c62_initial_schema.py  b7e2a1d0c9f8_sqlite_legacy_posts_guid.py
app/: app.py  db.py  dependencies.py  images.py  lifespan.py  main.py  s3_storage.py  schemas.py  users.py
app/api/: __init__.py  deps.py
app/api/routers/: __init__.py  auth.py  posts.py  users.py
app/core/: __init__.py  auth.py  config.py  database.py  imagekit.py  migrations.py  s3.py  security.py
app/crud/: __init__.py  posts.py
app/models/: posts.py  users.py
app/routers/: __init__.py  auth.py  posts.py  users.py
app/schemas/: __init__.py  posts.py
app/services/: __init__.py  post_media.py  posts.py
docs/: README_KK.md  README_RU.md
frontend/: app.py
frontend/.streamlit/: config.toml
terraform/: .gitignore  README.md  locals.tf  outputs.tf  providers.tf  random.tf  render.tf  supabase.tf  terraform.tfvars.example  variables.tf  versions.tf
