[project]
name = "posts"
version = "0.1.0"
description = "A FastAPI based blog application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "boto3>=1.43.5",
    "fastapi>=0.136.1",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "imagekitio>=5.4.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "boto3-stubs[s3]>=1.43.6",
    "mypy>=2.0.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
    "types-requests>=2.33.0.20260503",
]

[tool.uv]
default-groups = ["dev"]

# =======================================================
# Ruff: Fast code checking and formatting
# =======================================================
[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "SIM", "TCH", "PTH", "RUF",
]
# B008: FastAPI idiomatically uses Depends()/File()/Form() in defaults.
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# =======================================================
# Mypy: Strict static type inference
# =======================================================
[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
show_error_codes = true
pretty = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
